<resources>
    <string name="app_name">Connected Apartment</string>
    <string name="connected">Connected</string>
    <string name="apartment">Apartment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="tenant_account">Tenant Account</string>

    <string name="action_settings">Settings</string>

    <string name="network_is_unavailable">"Network is unavailable"</string>

    <!--Reset password-->
    <string name="send_email">Send email&#8230;</string>
    <string name="reset_email_subject">PASSWORD RESET</string>
    <string name="reset_email_body">"Dear Building Mangager, \n\nCould you please reset password for me? \nHere is my Tenant ID: "</string>
    <string name="title_activity_tenant_dashboard">TenantDashboardActivity</string>
    <string name="title_activity_bmdashboard">BMDashboardActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_booking_facility">BookingFacilityActivity</string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in or register</string>
    <string name="action_log_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="create_account">Create Account</string>
    <string name="maintenance">Maintenance</string>
    <string name="create_event">Create Event</string>
    <string name="make_booking">Make Booking</string>
    <string name="add_facility">Add Facility</string>
    <string name="reset_password">Reset Password</string>

    <string name="create_account_activity">Create Account</string>
    <string name="create">Create</string>
    <string name="tenant_id">Tenant ID</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="contact_number_hint">"e.g. 0412345678"</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="title_activity_register_form">RegisterFormActivity</string>
    <string name="title_activity_create_account_result">CreateAccountResult</string>
    <string name="title_activity_my_profile">MyProfile</string>

    <string name="tenant_id_colon">"Tenant ID: "</string>
    <string name="password_colon">"Password: "</string>

    <string name="hey_there">"Hey, There"</string>
    <string name="my_profile">My Profile</string>
    <string name="book_facility">Book Facility</string>
    <string name="view_booking">View Booking</string>

    <string name="facility_name">Facility Name</string>
    <string name="facility_location">Level</string>

    <string name="future_booking">Future Booking</string>

    <string name="view_booking_hint1">30/12/2016 Halloween Pool Party</string>
    <string name="view_booking_hint2">Location: Park Lane Tower</string>
    <string name="view_booking_hint3">Time: 20:00 - 21:00</string>


    <string name="register">Register</string>
    <string name="cancel">Cancel</string>

    <string name="choose_facility">Choose Facility</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_day">Choose Day</string>

    <string name="log_out">Log out</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_password">Old password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
