<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sepgroup4.connectedapartment.Controllers.RegisterFormActivity"
    tools:showIn="@layout/activity_view_booking">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tenant Name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/activity_view_booking_tenant_id_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tenant ID"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future_booking" />

    <TextView
        android:id="@+id/activity_view_booking_date_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_booking_hint1" />

    <TextView
        android:id="@+id/activity_view_booking_location_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_booking_hint2" />

    <TextView
        android:id="@+id/activity_view_booking_time_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_booking_hint3" />



    <Button
        android:id="@+id/modify_booking_confirm_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Delete"
        android:textStyle="bold" />


</LinearLayout>
