<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sepgroup4.connectedapartment.Controllers.LoginActivity"
    android:background="@drawable/building_background">

    <TextView
        android:id="@+id/activity_login_connected_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected"
        android:paddingTop="70dp"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/colorShallowBlack"/>

    <TextView
        android:id="@+id/activity_login_apartment_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_connected_textview"
        android:text="@string/apartment"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@color/colorShallowBlack"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/activity_login_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/progress_bar_padding"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_login_apartment_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_log_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>

            <Button
                android:id="@+id/activity_login_email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_log_in_short"
                android:textStyle="bold"
                android:theme="@style/RaisedButton"/>

            <TextView
                android:id="@+id/activity_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
