<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sepgroup4.connectedapartment.Controllers.TenantDashboardActivity"
    tools:showIn="@layout/activity_tenant_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_tenant_dashboard_my_profile_linearlayout"
            style="@style/LayoutButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorShallowCream"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ButtonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_profile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_tenant_dashboard_book_facility_linearlayout"
            style="@style/LayoutButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorDarkCream"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ButtonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/book_facility" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_tenant_dashboard_create_event_linearlayout"
            style="@style/LayoutButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorShallowCream"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ButtonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_event" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_tenant_dashboard_view_booking_linearlayout"
            style="@style/LayoutButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorDarkCream"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ButtonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/view_booking" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
